--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+body {
+  background-color: #1d1d1d;
+  color: white;
+}
+
 .App-header {
   background-color: #1d1d1d;
   min-height: 100vh;
